[304913-40663753] So I got intrigued by TestNG. Isn't that always the case with IT. Seems TestNG is better that JUnit, but this is purely based on a few blogs I read. Now we use TestNG. Works well for us. 9 Tests being executed successfully. I'm yet to do the read section of the hobbits (-: ~Write tests to check Kundera compliance to entities